feat: add correlation calculation for base_total and attack

--- a/pokemon.ipynb
+++ b/pokemon.ipynb
@@ -251,6 +251,35 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Let's calculate different corrlections for attacks and base_total. The pearsons correlation and spearman correlation value between base total and attack are both larger than 0.7."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Pearsons correlation: 0.730\n",
+      "Spearmans correlation: 0.718\n"
+     ]
+    }
+   ],
+   "source": [
+    "from scipy.stats import pearsonr,spearmanr\n",
+    "corr, _ = pearsonr(X_full['base_total'], X_full['attack'])\n",
+    "print('Pearsons correlation: %.3f' % corr)\n",
+    "corr, _ = spearmanr(X_full['base_total'], X_full['attack'])\n",
+    "print('Spearmans correlation: %.3f' % corr)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Clustering for legend/not legend\n",
     "First, we are going to find out the number of having multi-types."
    ]
