feat: implement apriori algo on types

--- a/pokemon.ipynb
+++ b/pokemon.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -647,6 +647,87 @@
     ")\n",
     "\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To implement Apriori Algorithm, our dataset should be a form of array of arrays. Therefore, we convert our dataset by the following script:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "records = []\n",
+    "X_full['type1'][0]\n",
+    "for i in range(0, 800):\n",
+    "    record = []\n",
+    "    record.append(X_full['type1'][i])\n",
+    "    if X_full['type2'][i] != \"None\":\n",
+    "        record.append(X_full['type2'][i])\n",
+    "    records.append(record)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Implementing apriori algorithm. We are using apyori library. As the majority of pokemon has only one type, it is hard to have rules with large min_support as well as confidence. Therefore, we set min_support to 0.0045, min_confidence to 0.15 and min_lift for 1.5 to see the rules."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Rule: ['bug'] -> ['poison']\n",
+      "Support: 0.015\n",
+      "Confidence: 0.15584415584415584\n",
+      "Lift: 1.948051948051948\n",
+      "=====================================\n",
+      "Rule: ['flying'] -> ['normal']\n",
+      "Support: 0.0325\n",
+      "Confidence: 0.2653061224489796\n",
+      "Lift: 1.947200898708107\n",
+      "=====================================\n",
+      "Rule: ['poison'] -> ['grass']\n",
+      "Support: 0.0175\n",
+      "Confidence: 0.21875000000000003\n",
+      "Lift: 1.8041237113402064\n",
+      "=====================================\n",
+      "Rule: ['rock'] -> ['ground']\n",
+      "Support: 0.01125\n",
+      "Confidence: 0.15254237288135594\n",
+      "Lift: 1.9067796610169492\n",
+      "=====================================\n",
+      "Rule: ['steel'] -> ['psychic']\n",
+      "Support: 0.00875\n",
+      "Confidence: 0.15555555555555556\n",
+      "Lift: 1.5176151761517616\n",
+      "=====================================\n"
+     ]
+    }
+   ],
+   "source": [
+    "from apyori import apriori\n",
+    "association_rules = apriori(records, min_support=0.0045, min_confidence=0.15, min_lift=1.5, min_length=2)\n",
+    "association_results = list(association_rules)\n",
+    "for item in association_results:\n",
+    "    pair = item[0] \n",
+    "    items = [x for x in pair]\n",
+    "    print(\"Rule: \" + str(list(item.ordered_statistics[0].items_base)) + \" -> \" + str(list(item.ordered_statistics[0].items_add)))\n",
+    "    print(\"Support: \" + str(item[1]))\n",
+    "    print(\"Confidence: \" + str(item[2][0][2]))\n",
+    "    print(\"Lift: \" + str(item[2][0][3]))\n",
+    "    print(\"=====================================\")"
    ]
   }
  ],
